if(BcmHost_FOUND)
    add_subdirectory(brcm-egl)
endif()
add_subdirectory(wayland-egl)
if(X11_FOUND AND X11_Xcomposite_FOUND)
    if(EGL_FOUND OR OPENGL_FOUND)
        add_subdirectory(xcomposite_share)
    endif()
    if(EGL_FOUND)
        add_subdirectory(xcomposite-egl)
    endif()
    if(${Qt5Gui_OPENGL_IMPLEMENTATION} STREQUAL "GL")
        add_subdirectory(xcomposite-glx)
    endif()
endif()
